test/sema/lambda-infer-parameter-type-fail.delta
// RUN: %check_errors %not %delta -typecheck %s

void main() {
    // CHECK: [[@LINE+1]]:13: error: couldn't infer type for parameter 'b'
    var a = b -> b;
}
